--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         ],
         "psr-4": {
             "elbauldelcodigo\\": "app/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
